..F....PS. [ZBX-10076] fixed text information containing non-ASCII characters being saved incorrectly to IBM DB2 database in case of system locale misconfiguration (gleb, Oleg)
..F....... [ZBX-9989] optimized SQL queries for graphs building (Gunars, Sasha)

--------------------------------------------------------------------------------
Changes for 3.0.4rc1

New features:

Bug fixes:
..F....... [ZBX-10605] fixed access_deny() message layout for not logged in page visitors (Cemeris)
..F....... [ZBX-10605] fixed access to popup_media for Zabbix Admin user in profile->media (Cemeris)
..F....... [ZBX-10806] fixed whitespace between elements in the IT services form (Sasha)

--------------------------------------------------------------------------------
Changes for 3.0.3

3.0.3rc1 was released as 3.0.3 without any changes

--------------------------------------------------------------------------------
Changes for 3.0.3rc1

New features:
..F....... [ZBX-10672] added script name and command into a script execution form (Cemeris, Pavel, Sasha)
A.F....... [ZBX-1357] enabled Chinese (China) translation to be displayed by default (zalex_ua)
A.F....... [ZBX-1357] updated Chinese (China), English (United States), French, Italian, Japanese, Korean, Polish, Portuguese (Brazil), Russian, Slovak, Spanish, Ukrainian translations; thanks to Zabbix translators (zalex_ua)

Bug fixes:
...G...PS. [ZBX-9839] fixed Windows compilation error and time zone related issues (gleb, viktors)
A......... [ZBX-10752] fixed array formatting in exported JSON (Cemeris, Sasha)
A......... [ZBX-10755] fixed deletion of the items which used in graph Y axis min/max parameters (Sasha)
........S. [ZBX-10690] fixed possible buffer overruns in discovery macro substitution and other macro context issues (asaveljevs)
..F....... [ZBX-10640] fixed unexpected reset of group and host filter (Gunars)